Arrumando as rotas
